--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':backend', ':provideJokes', ':displayjokes', ':javaProvider'
+include ':app', ':backend',':displayjokes', ':javaProvider'
